--- a/etc/bash/rc/history
+++ b/etc/bash/rc/history
@@ -4,7 +4,7 @@
 
 export   HISTCONTROL=erasedups
 export  HISTFILESIZE=10000
-export      HISTFILE=~/.bash/saved_history
+export      HISTFILE="${HOME}/etc/bash/saved_history"
 
 alias    h='history 20'
 alias   hg='history | grep'
