--- a/etc/bash/rc/history
+++ b/etc/bash/rc/history
@@ -5,7 +5,7 @@
 
 export   HISTCONTROL=erasedups
 export  HISTFILESIZE=10000
-export      HISTFILE="${HOME}/etc/bash/saved_history"
+export      HISTFILE="${HOME}/var/bash_history"
 
 alias    h='history 20'
 alias   hg='history | grep'
